# p2p-messenger

./: .gitignore  Cargo.toml  config.toml.example
crates/api/: Cargo.toml
crates/api/src/: command.rs  lib.rs  prelude.rs
crates/node/: Cargo.toml
crates/node/src/: cli.rs  config.rs  keys.rs  main.rs
