[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }